src/objects/Marketing_activity__c.object
<CustomObject>
    <customHelpPage>Marketinghelppage</customHelpPage>
    <description>Event object to hold timeframe and event-cat</description>
    <fields>
        <fullName>Activity_Class__c</fullName>
        <inlineHelpText>This will give different color in Gantt view</inlineHelpText>
        <label>Activity class</label>
        <picklist>
            <picklistValues>
                <fullName>Activity blue</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
            <picklistValues>
                <fullName>Activity green</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>Activity red</fullName>
                <color>#E27001</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Activitytype__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Activity type</label>
        <referenceTo>Activitytype__c</referenceTo>
        <relationshipName>Marketing_activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM__c</fullName>
        <label>Performance CRM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ERP__c</fullName>
        <label>Performance ERP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ends_date__c</fullName>
        <label>End date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipName>Marketing_activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority_level__c</fullName>
        <label>Priority level</label>
        <picklist>
            <picklistValues>
                <fullName>Top</fullName>
                <color>#CC0000</color>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
                <color>#FF6600</color>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
                <color>#33CC00</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Medium low</fullName>
                <color>#00CCCC</color>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
                <color>#3366FF</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Subproject__c</referenceTo>
        <relationshipName>Marketing_activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Social_media__c</fullName>
        <inlineHelpText>This field is a container for Socialmedia setting, on this marketing activity.
DONT DO CHANGE THIS!</inlineHelpText>
        <label>Performance Social media</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Starts_date__c</fullName>
        <label>Start date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StatusImage__c</fullName>
        <description>old code
IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;+musqot__Status_Image_Id__c,TEXT(musqot__Status__c),16,16)</description>
        <formula>CASE(Status__c, &apos;Not Started&apos;, IMAGE(&apos;/resource/1433929854000/musqot__Planned&apos;,TEXT(Status__c),16,16), &apos;In Progress&apos;, IMAGE(&apos;/resource/1433930034000/musqot__Active&apos;,TEXT(Status__c),16,16),&apos;Completed&apos;,IMAGE(&apos;/resource/1433930013000/musqot__Finnished&apos;,TEXT(Status__c),16,16),&apos;Deferred&apos;,IMAGE(&apos;/resource/1433930023000/musqot__Deferred&apos;,TEXT(Status__c),16,16), IMAGE(&apos;/resource/1443021886000/musqot__StatusOther&apos;,TEXT(Status__c),16,16))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Image_Id__c</fullName>
        <label>Status image id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <color>#3366FF</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
                <color>#FFCC33</color>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
                <color>#33CC00</color>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred</fullName>
                <color>#CC0000</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>multi_pubication__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If you has mor the one publication of activity</inlineHelpText>
        <label>multi_pubication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>oldId__c</fullName>
        <label>oldId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tempid__c</fullName>
        <label>tempid</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Marketing activity</label>
    <nameField>
        <label>Marketingactivity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>